# project-hack-supply-chain

./: .dockerignore  .envrc  .gitignore  ANALYTICAL_APPROACH.md  Correlation Matrix  Dockerfile  README.md  analytical_approach.md  docker-compose.yml  forecast_data.csv  forecast_data_dictionary.csv  forecast_data_stripped.csv  forecast_failure_model.py  forecast_failure_scored.csv  logistic_regression_model.py  main.py  pca_analysis.py  pca_linear_workflow.py  pca_smoketest_loadings.csv  pca_smoketest_scores.csv  pca_smoketest_top_loadings.csv  pca_smoketest_variance.csv  plotly_pca_linear_upload_dashboard.py  plotly_pca_linear_visuals.py  plotly_upload_dashboard.py  programme_budget.csv  pyproject.toml  requirements.txt  scored_stability_only_smoketest.csv  script.txt
assets/: dashboard.css
data/: commitments_summary.csv  forecast_data.csv  portfolio_funding_envelope.csv  programme_attributes.csv  programme_month_change.csv  supplier_attributes.csv
model/: __init__.py  dashboard_service.py  ingestion.py  settings.py
outputs/: workflow_linear_metrics.csv  workflow_linear_predictions.csv  workflow_pca_loadings.csv  workflow_pca_scores.csv  workflow_pca_variance.csv  workflow_plotly_report.html  workflow_plotly_visuals.html  workflow_run_metadata.json  workflow_selected_factor.csv
outputs_variance/: workflow_linear_metrics.csv  workflow_linear_predictions.csv  workflow_pca_scores.csv  workflow_plotly_report.html  workflow_plotly_visuals.html  workflow_run_metadata.json  workflow_selected_factor.csv
prompts/: system_prompt_Forecast_Failed_Flag.txt  (+4 more)
src/: app.py  (+1 more)
(+16 files in other folders)
